# crosscheck

./: .env.example  .gitignore  LICENSE  README.md  RUNBOOK.md  pyproject.toml  serve.py
argus/: api.py  audit.py  impact.py  live_smoke.py  preset.py  report.py
argus/static/: index.html
crosscheck/: api.py  claims.py  config.py  contradictions.py  gaps.py  graph_access.py  ingest.py  model.py  query.py
crosscheck/preset/: benchmarks.py
crosscheck/static/: index.html
docs/: Argus-Demo-Script.doc  Crosscheck-Demo-Script.doc  DEMO.md  architecture.md  blog.md  demo-script.md  social.md
docs/superpowers/plans/: 2026-07-01-crosscheck.md  2026-07-05-argus.md
docs/superpowers/specs/: 2026-07-01-crosscheck-design.md  2026-07-05-argus-design.md
scripts/: live_smoke.py  persistence_check.py
tests/: test_api.py  test_argus_audit.py  test_argus_impact.py  test_argus_preset.py  test_argus_report.py  test_claims.py  test_config.py  test_contradictions_judge.py  test_contradictions_structural.py  test_gaps.py  test_graph_access.py  test_preset.py
