[project]
name = "crosscheck"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cognee[scraping]>=1.1.0,<2.0.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["crosscheck*"]
